--- a/index.html
+++ b/index.html
@@ -15,55 +15,64 @@
             <p>
                 …onde você possa pertencer a um clube escolar, um grupo de gamers, ou uma comunidade artística mundial. Onde você e alguns amigos possam passar um tempo juntos. Um lugar que torna fácil conversar todos os dias e socializar com mais frequência.
             </p>
-            <button>
-                Baixar para Windows
-            </button>
-            <button>
-                Abra o Discord no seu navegador
-            </button>
+            <div class="buttons">
+                <button>
+                    Baixar para Windows
+                </button>
+                <button>
+                    Abra o Discord no seu navegador
+                </button>
+            </div>
         </section>
     </header>
     <main>
         <section class="spaces">
             <img src="./src/images/rooms.svg" alt="Canais de texto do Discord, com diversos temas, em sequência: pet-shop, study-group, games e cooking. Algumas pessoas estão falando sobre notas de uma aula de história em study-group.">
-            <h2>
-                Crie um espaço controlado por convite onde você se sinta em casa
-            </h2>
-            <p>
-                Os servidores Discord são organizados em canais com assuntos para vocês colaborarem, compartilharem ou simplesmente falarem do dia sem entupir um chat geral.
-            </p>
+            <article class="main-text">
+                <h2>
+                    Crie um espaço controlado por convite onde você se sinta em casa
+                </h2>
+                <p>
+                    Os servidores Discord são organizados em canais com assuntos para vocês colaborarem, compartilharem ou simplesmente falarem do dia sem entupir um chat geral.
+                </p>
+            </article>
         </section>
         <section class="meeting">
             <img src="./src/images/voice.svg" alt="Salas do Discord com propostas e membros diferentes, uma com o nome just-chillin e outra dnd-night.">
-            <h2>
-                Aqui é fácil se encontrar
-            </h2>
-            <p>
-                Entre no canal de voz quando estiver à toa. Amigos no mesmo servidor podem te ver e entrar imediatamente, sem nem ter que fazer a chamada.
-            </p>
+            <article class="main-text">
+                <h2>
+                    Aqui é fácil se encontrar
+                </h2>
+                <p>
+                    Entre no canal de voz quando estiver à toa. Amigos no mesmo servidor podem te ver e entrar imediatamente, sem nem ter que fazer a chamada.
+                </p>
+            </article>
         </section>
         <section class="community">
             <img src="./src/images/profile.svg" alt="Mostra os diferentes perfis e suas atribuições com cargos do Discord, além de suas personalizações como foto de perfil e ID.">
-            <h2>
-                Para poucos e para muitos
-            </h2>
-            <p>
-                Organize qualquer comunidade com ferramentas de moderação e acesso personalizado a membros. Dê poderes especiais aos membros, monte canais privados e muito mais.
-            </p>
+            <article class="main-text">
+                <h2>
+                    Para poucos e para muitos
+                </h2>
+                <p>
+                    Organize qualquer comunidade com ferramentas de moderação e acesso personalizado a membros. Dê poderes especiais aos membros, monte canais privados e muito mais.
+                </p>
+            </article>
         </section>
         <section class="connection">
-            <h2>
-                TECNOLOGIA DE CONEXÃO CONFIÁVEL
-            </h2>
-            <p>
-                Voz e vídeo de baixa latência, para você conversar como se estivesse na mesma sala. Dê um joinha por vídeo, veja amigos transmitirem a jogatina do dia ou junte uma galera pra desenhar na tela compartilhada.
-            </p>
+            <article class="main-text">
+                <h2>
+                    TECNOLOGIA DE CONEXÃO CONFIÁVEL
+                </h2>
+                <p>
+                    Voz e vídeo de baixa latência, para você conversar como se estivesse na mesma sala. Dê um joinha por vídeo, veja amigos transmitirem a jogatina do dia ou junte uma galera pra desenhar na tela compartilhada.
+                </p>
+            </article>
             <img src="./src/images/call.svg" alt="Mostra desenhos simbolizando membros em chamada de vídeo, tanto do computador quanto do smartphone, cada um fazendo uma atividade distinta enquanto estão em chamada.">
         </section>
-
     </main>
     <footer>
-
+        <img src="./src/images/logo.svg" alt="Logo do Discord, que se parece um controle de vídeo game, com dois olhos, dando a impressão de um rosto.">
     </footer>
 </body>
 </html>
